project/test/semantics/unit/bad/input/Bad47_shouldThrowMethodArgumentListInvalidErrorForActions.ty
mutable class TestClass {

    values: {
        total: Int;
        count: Int;
        name: String = "Some name";
    }
    
    variables: {
        var1: Int = 1;
        var2: String = "S";
        var3: String;
        var4: Bool;
    }
    
    functions: {
        goodFunction: (x: Int, y: Bool, z: String) -> Int = 50
    }
    
    actions: {
        goodAction: (x: Int, y: String) -> Int = {
            val z: Int = 4;
            z
        }
    }
}

singleton class Main {
    
    actions: {
        main: () -> Int = {
            val testClass: TestClass = TestClass(3, 4 * 4, "OK", False);
            testClass#goodAction(3, 13) // MethodArgumentListInvalidError
        }
    }
}
